--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,9 @@ a.custom-card,
 a.custom-card:hover {
     color: inherit;
 }
+
+div.effect-round:hover:after {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
