--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,28 +10,77 @@
 
 .numbers {
     display: flex;
-    flex: 1;
+    flex-direction: column;
     //min-height: 100vh;
     align-items: center;
     justify-content: center;
+    margin: 0 auto;
+}
+
+@media only screen and (min-width: 576px) {
+    .numbers {
+        flex: 1;
+        flex-direction: row;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .navbar--small {
+        padding: 0;
+    }
+
+    .breadcrumb-container-sm {
+        width: 80%;
+        margin: 10px auto;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .breadcrumb-container-sm {
+       display: none;
+    }
 }
 
 .number {
-    border: .4rem solid black;
-    border-radius: 50%;
+    border: 0.2rem dashed black;
+    border-radius: 1000px;
     //border-radius: .5rem;
-    margin: 0.5rem;
+    margin: 1rem;
     //padding: 1rem .5rem;
     transition: all .07s ease;
-    width: 10rem;
+    padding: 0.5rem 1rem;
     text-align: center;
-    color: white;
+    color: black;
     background: rgba(0,0,0,0);
-    text-shadow: 0 0 .5rem black;
-    font-size: 4rem;
+    font-size: 2rem;
+    cursor: pointer;
+    line-height: 1;
+}
+
+.number--active {
+    background-color: #96f877;
 }
 
 .question-text {
     text-align: center;
     font-size: 4rem;
 }
+
+.center {
+    text-align: center;
+    font-size: 4rem;
+}
+
+.align-next {
+    text-align:center
+}
+
+.align-next > div {
+    vertical-align:top;
+    display:inline-block;
+    font-size: 4rem;
+}
+
+//.dropdown-menu {
+//    flex-direction: column;
+//}
